@@ -83,12 +83,4 @@ else
     JAVA=java
 fi
 
-# Extend xjc options with options specific to modular JDK
-RUN_OPTS="$XJC_OPTS"
-"$JAVA" -cp "$JAXB_HOME/lib/jaxb-core.jar" com.sun.xml.bind.util.ModuleHelper
-if [ $? -ne 0 ]
-then
-    RUN_OPTS="--add-modules java.xml.bind $RUN_OPTS"
-fi
-
-exec "$JAVA" $RUN_OPTS -jar "$JAXB_HOME/lib/jaxb-xjc.jar" "$@"
+exec "$JAVA" $XJC_OPTS -jar "$JAXB_HOME/lib/jaxb-xjc.jar" "$@"
